test/classes/ferguson/delete-free/owned-in-record-const-error.good
owned-in-record-const-error.chpl:4: error: const actual is passed to 'ref' formal 'other' of init=()
